--- a/index.html
+++ b/index.html
@@ -18,17 +18,26 @@
 
     <div class="app">
         <form id="myForm">
-            <h1 id="question">Math.floor((202 + 100) * 1.338) = ???</h1>
+            <h1 id="question"></h1>
             
             <div class="inputDiv">
                 <label for="response">RESPONSE:</label>
-                <input type="number" name="response" id="responseInput" pattern="[0-9]$">
+                <input
+                    id="responseInput"
+                    type="number"
+                    name="response"
+                    placeholder="###"
+                    pattern="[0-9]"
+                    required
+                >
             </div>
             
             <button>SEND</button>
         </form>
     </div>
 
+    <script src="./js/questions.js"></script>
+    <script src="./js/form.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
