--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 
     <div class="app">
         <form id="myForm">
-            <h1 id="question"></h1>
+            <ul id="question">
+
+            </ul>
             
-            <div class="inputDiv">
+            <div id="inputDiv" class="inputDiv">
                 <label for="response">RESPONSE:</label>
                 <input
                     id="responseInput"
@@ -32,11 +34,11 @@
                 >
             </div>
             
-            <button>SEND</button>
+            <button id="myButton">SEND</button>
         </form>
     </div>
 
-    <script src="./js/questions.js"></script>
+    <script src="./js/data.js"></script>
     <script src="./js/form.js"></script>
     <script src="./js/app.js"></script>
 </body>
