--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 
+    <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
-
+    <!-- google fonts -->
 
     <title>Error404</title>
 </head>
@@ -19,7 +20,6 @@
     <div class="app">
         <form id="myForm">
             <ul id="question">
-
             </ul>
             
             <div id="inputDiv" class="inputDiv">
